Ribon overflow fix
This attribute fixes the overflow issue as a prep for the code that
implements responsiveness of the ribbon.

--- a/test/top_files/ribbon.css
+++ b/test/top_files/ribbon.css
@@ -1,3 +1,13 @@
+.ribbon {
+ 	display: block;
+	width:100%;
+	height: 54px;
+	background-color:#0080c0;
+	font-family:Verdana,Arial;
+	font-size:8pt;
+	color: #ffffff;
+	overflow: hidden;	
+}
 .ribbonIcon { 
 	display: inline-block;
 	width: 28px;
